# AoC

./: CMakeLists.txt  build.sh  gtest.sh  integration.sh
2016-01/: CMakeLists.txt  Traveler.h  main.cpp  tests.cpp  year2016day01.h
2016-02/: CMakeLists.txt  integration-part2.out  main.cpp
2016-03/: CMakeLists.txt  main.cpp  tests.cpp
2016-04/: CMakeLists.txt  main.cpp
2016-05/: CMakeLists.txt  main.cpp
2016-06/: CMakeLists.txt  main.cpp
2016-07/: CMakeLists.txt  main.cpp
2016-08/: CMakeLists.txt  main.cpp  pixel.cpp  pixel.h
2016-09/: CMakeLists.txt  decompress.cpp  decompress.h  main.cpp
2016-10/: Bot.cpp  Bot.h  BotTests.cpp  CMakeLists.txt  MicrochipFactory.h  MicrochipFactoryTests.cpp  OutputBin.h  OutputBinTests.cpp  Value.h  ValueReceiver.h  ValueTests.cpp  bots.cpp  bots.h  main.cpp  preprocess.sh  preprocessed-input
2016-11/: CMakeLists.txt  Facility.cpp  Facility.h  main.cpp  preprocess.sh  preprocessed-input  tests.cpp
2016-12/: CMakeLists.txt  Vm.h  main.cpp  tests.cpp
2016-13/: CMakeLists.txt  Maze.h  main.cpp  tests.cpp
2016-14/: CMakeLists.txt  KeyGenerator.h  main.cpp  tests.cpp
2016-15/: CMakeLists.txt  Sculpture.h  integration-part2.out  main.cpp  preprocess.sh  tests.cpp
2016-16/: CMakeLists.txt  Dragon.h  main.cpp  tests.cpp
2016-17/: CMakeLists.txt  ShortestPath.h  main.cpp  tests.cpp
2016-18/: CMakeLists.txt  Tiler.h  main.cpp  tests.cpp
2016-19/: CMakeLists.txt  ElfGame.h  main.cpp  tests.cpp
2016-20/: CMakeLists.txt  FirewallRules.h  main.cpp  tests.cpp
2016-21/: CMakeLists.txt  Scrambler.h  integration-part1.out  integration-part2.out  main.cpp  tests.cpp
2016-22/: CMakeLists.txt  Grid.h  main.cpp  preprocess.sh  preprocessed-input  tests.cpp
